--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm run dev",
     "client": "cd client && npm run dev",
-    "build": "cd client && npm run build",
-    "start": "cd server && npm start",
-    "postinstall": "cd server && npm install",
-    "install-all": "npm install && cd server && npm install && cd ../client && npm install"
+    "build": "cd client && npm install && npm run build",
+    "build:server": "cd server && npm install",
+    "start": "cd client && npm start",
+    "start:server": "cd server && npm start",
+    "install-all": "npm install && cd server && npm install && cd ../client && npm install",
+    "vercel-build": "cd client && npm install && npm run build"
   },
   "keywords": ["image", "compression", "converter", "optimizer"],
   "author": "Image Compressor System",
