--- a/package.json
+++ b/package.json
@@ -3,30 +3,16 @@
   "version": "1.0.0",
   "description": "Sistema Premium de Conversão e Compactação de Imagens",
   "private": true,
-  "workspaces": [
-    "client",
-    "server"
-  ],
   "scripts": {
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm run dev",
     "client": "cd client && npm run dev",
-    "build": "cd client && npm install && npm run build",
-    "build:server": "cd server && npm install",
-    "start": "cd client && npm start",
-    "start:server": "cd server && npm start",
-    "install-all": "npm install && cd server && npm install && cd ../client && npm install",
-    "vercel-build": "cd client && npm install && npm run build"
+    "install-all": "npm install && cd server && npm install && cd ../client && npm install"
   },
   "keywords": ["image", "compression", "converter", "optimizer"],
   "author": "Image Compressor System",
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^8.2.2"
-  },
-  "dependencies": {
-    "next": "14.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
   }
 }
