Fix: Simplificar vercel.json para versão 2

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
 ﻿{
-  "buildCommand": "cd client && npm install && npm run build",
-  "devCommand": "cd client && npm run dev",
-  "installCommand": "cd client && npm install",
-  "outputDirectory": "client/.next"
+  "version": 2
 }
