--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
 ﻿{
-  "version": 2
+  "version": 2,
+  "buildCommand": "cd client && npm install && npm run build",
+  "outputDirectory": "client/.next",
+  "installCommand": "cd client && npm install"
 }
