Fix: Corrigir sintaxe do vercel.json - remover version

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 ﻿{
-  "version": 2,
-  "buildCommand": "cd client && npm install && npm run build",
+  "buildCommand": "cd client && npm run build",
   "outputDirectory": "client/.next",
   "installCommand": "cd client && npm install"
 }
