Fix: Simplificar deploy - apenas Root Directory necessário

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 ﻿{
-  "buildCommand": "cd client && npm run build",
-  "outputDirectory": "client/.next",
-  "installCommand": "cd client && npm install"
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "https://seu-backend-aqui.railway.app/api/:path*"
+    }
+  ]
 }
