--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "build": "cd client && npm install && npm run build",
     "install-all": "npm install && cd server && npm install && cd ../client && npm install"
   },
-  "keywords": ["image", "compression", "converter", "optimizer"],
+  "keywords": [
+    "image",
+    "compression",
+    "converter",
+    "optimizer"
+  ],
   "author": "Image Compressor System",
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "xlsx": "^0.18.5"
   }
 }
